# cs180-23-organic-programming

./: .gitignore  .gitmodules  CMakeLists.txt  Database.h  README.md  UserAccount.cpp  UserAccount.h  UserAccount.py  cars.json  cars.py  convertCSV.cpp  create.cpp  database.json  example.csv  filters.h  jeff.cpp  jsonPathQuery.cpp  main.cpp  main.py  manga.cpp  organicDB  os_dirCreate.py  test.cpp  update.cpp  updateJson.cpp
Backend/: Collection.h  Create.h  DB_directoryCreate.cpp  Database.h  Delete.h  File.h  Read.h  Search.h  Update.h  Validate.h  adrianMain.cpp  backEndTest.cpp  create copy.cpp  create.cpp  createTest.cpp  csv.h  csvConvert.cpp  employees.csv  filters.h  jsonPathQuery.cpp  nested.json  query.cpp  updateJson.cpp  usernames.json
Backend/output/: mangaCollection.json
BurndownChart/: Burndown.txt
Frontend/: UserAccount.h  main.cpp  menu.cpp  menu.h
output/: mangaCollection.json
test/: nando.cpp  test.cpp
test/old/: mangaCollection.json
tests/: test.cpp  test_UserAccount.py
